<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 iWedia S.A.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B000"
    android:orientation="horizontal"
    android:padding="20dp"
    tools:context="com.iwedia.five.RecordListDialog" >
    <RelativeLayout
        android:id="@+id/dummyLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        <LinearLayout
            android:id="@+id/dummyLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/buttonSortByNameAsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sort_name_asc" />
            <Button
                android:id="@+id/buttonSortByNameDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/sort_name_desc" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dummyLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dummyLayout1"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/buttonSortByDurationAsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sort_duration_asc" />
            <Button
                android:id="@+id/buttonSortByDurationDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/sort_duration_desc" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dummyLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dummyLayout2"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/buttonSortByDateAsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sort_date_asc" />
            <Button
                android:id="@+id/buttonSortByDateDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/sort_date_desc" />
        </LinearLayout>
        <ListView
            android:id="@+id/listViewRecords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dummyLayout3"
            android:layout_marginTop="20dp"
            android:choiceMode="singleChoice" >
        </ListView>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="10dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                android:id="@+id/textViewMediaTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/desc"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                android:id="@+id/textViewMediaDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_time"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                android:id="@+id/textViewMediaStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duration"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                android:id="@+id/textViewMediaDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/record_size"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                android:id="@+id/textViewMediaSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>