<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 iWedia S.A.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B000"
    android:orientation="horizontal"
    android:padding="20dp" >
    <RelativeLayout
        android:id="@+id/dummyLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        <TextView
            android:id="@+id/textViewTimeFromStream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <ListView
            android:id="@+id/listViewChannels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewTimeFromStream"
            android:layout_marginTop="20dp"
            android:choiceMode="singleChoice" >
        </ListView>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="10dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_time"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <Button
                android:id="@+id/buttonStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_neutral" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end_time"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <Button
                android:id="@+id/buttonEndTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_neutral" />
        </LinearLayout>
        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create" />
    </LinearLayout>
</LinearLayout>